--- a/Pokedex_OCME/Vista/Pokemon/Detallepokemon.xaml
+++ b/Pokedex_OCME/Vista/Pokemon/Detallepokemon.xaml
@@ -4,13 +4,9 @@
              x:Class="Pokedex_OCME.Vista.Pokemon.Detallepokemon"
              NavigationPage.HasNavigationBar="False"
              xmlns:sharpnado="clr-namespace:Sharpnado.MaterialFrame;assembly=Sharpnado.MaterialFrame">
-    <Grid>
-        <Grid.Background>
-            <LinearGradientBrush StartPoint="1,0">
-                <GradientStop Color="{Binding parametrosRecibe.Colorfondo}" Offset="0.1"/>
-                <GradientStop Color="{Binding parametrosRecibe.Colorpoder}" Offset="1"/>
-            </LinearGradientBrush>
-        </Grid.Background>
+    <Grid BackgroundColor="Black">
+       
+        
         <StackLayout Margin="10,0,10,0">
             <Image Source="https://i.ibb.co/r6d9rnQ/volver.png"
                HeightRequest="25"
